--- a/_config.yml
+++ b/_config.yml
@@ -61,6 +61,7 @@ sass:
 # Use the following plug-ins
 gems:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
+  - jemoji #emoji for Jekyll
 
 # Exclude these files from your production _site
 exclude:
